@@ -1,4 +1,4 @@
-<!-- $Id: mod_ban.html,v 1.4 2008-03-04 02:05:06 castaglia Exp $ -->
+<!-- $Id: mod_ban.html,v 1.5 2009-06-10 16:18:22 castaglia Exp $ -->
 <!-- $Source: /home/proftpd-core/backup/proftp-cvsroot/proftpd/doc/contrib/mod_ban.html,v $ -->
 
 <html>
@@ -171,6 +171,7 @@ supported events are:
   MaxConnectionsPerHost
   MaxHostsPerUser
   TimeoutIdle
+  TimeoutLogin
   TimeoutNoTransfer
 </pre>
 An event is generated whenever one of these limits is reached by a client.
@@ -401,7 +402,7 @@ eventually tying up your available system resources with waiting
 <hr><br>
 
 Author: <i>$Author: castaglia $</i><br>
-Last Updated: <i>$Date: 2008-03-04 02:05:06 $</i><br>
+Last Updated: <i>$Date: 2009-06-10 16:18:22 $</i><br>
 
 <br><hr>
 
